src/objects/Qualification__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finish_Date__c</fullName>
        <label>Finish Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finish_Month__c</fullName>
        <label>Finish Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                    <isActive>false</isActive>
                    <label>01</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <isActive>false</isActive>
                    <label>02</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <isActive>false</isActive>
                    <label>03</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <isActive>false</isActive>
                    <label>04</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <isActive>false</isActive>
                    <label>05</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <isActive>false</isActive>
                    <label>06</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <isActive>false</isActive>
                    <label>07</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <isActive>false</isActive>
                    <label>08</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <isActive>false</isActive>
                    <label>09</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <isActive>false</isActive>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                    <label>12</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finish_Year__c</fullName>
        <label>Finish Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_course_award__c</fullName>
        <label>Name of course/award</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_institution__c</fullName>
        <label>School/institution</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_Date__c</fullName>
        <label>Started Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Started_Month__c</fullName>
        <label>Started Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                    <isActive>false</isActive>
                    <label>01</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <isActive>false</isActive>
                    <label>02</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <isActive>false</isActive>
                    <label>03</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <isActive>false</isActive>
                    <label>04</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <isActive>false</isActive>
                    <label>05</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <isActive>false</isActive>
                    <label>06</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <isActive>false</isActive>
                    <label>07</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <isActive>false</isActive>
                    <label>08</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <isActive>false</isActive>
                    <label>09</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <isActive>false</isActive>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <isActive>false</isActive>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <isActive>false</isActive>
                    <label>12</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Started_Year__c</fullName>
        <label>Started Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Qualifications</relationshipLabel>
        <relationshipName>Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Qualification</label>
    <listViews>
        <fullName>Undecided_Qualification</fullName>
        <filterScope>Queue</filterScope>
        <label>Undecided</label>
        <queue>Undecided</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Qualification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>